[package]
name = "proxy-limiter-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.2"
actix-web = { version = "4.5.1", features = ["rustls"]}
awc = "3.4.0"
base64 = "0.22.0"
futures = "0.3.30"
futures-util = "0.3.30"
governor = "0.6.3"
serde_json = "1.0.114"
url = "2.5.0"
