[package]
name = "proxy-limiter-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.2"
actix-web = { version = "4.5.1", features = ["rustls"]}
awc = { version = "3.4.0", features = ["rustls"]}
base64 = "0.22.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
futures-util = "0.3.30"
governor = "0.6.3"
log = "0.4.21"
route-recognizer = "0.3.1"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
url = "2.5.0"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.0"
